--- a/YCclubs/style.css
+++ b/YCclubs/style.css
@@ -85,7 +85,8 @@ footer {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    bottom: 0%;
+    position: relative;
+    bottom: 0;
 }
 .footer-social a i {
     color: black;
@@ -297,8 +298,11 @@ span{
     border: #0384EE solid;
 }
 span:hover{
-    padding: 6px 20px;
-    background-color: #ffffff;
+  background-color: #FFFFFF;
+  color: #0384EE;
+}
+.span:hover{
+    background-color: #FFFFFF;
     color: #0384EE;
 }
 .span{
@@ -310,11 +314,6 @@ span:hover{
     border: #0384EE solid;
     text-decoration: none;
 }
-.span:hover{
-    padding: 6px 20px;
-    background-color: #ffffff;
-    color: #0384EE;
-}
 .cont{
     margin-top: 50px;
     display: flex;
@@ -325,3 +324,24 @@ span:hover{
 td{
     min-width: 80px;
 }
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+    color: #0384EE;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: flex;
+    flex-direction: column;
+    height: 100px;
+  }
